src/cblas.pxd


    void cblas_csyr2k(const CBLAS_ORDER Order, const CBLAS_UPLO Uplo, const CBLAS_TRANSPOSE Trans, const CBLAS_INT N, const CBLAS_INT K, const void* alpha, const void* A, const CBLAS_INT lda, const void* B, const CBLAS_INT ldb, const void* beta, void* C, const CBLAS_INT ldc)

    void cblas_ctrmm(const CBLAS_ORDER Order, const CBLAS_SIDE Side, const CBLAS_UPLO Uplo, const CBLAS_TRANSPOSE TransA, const CBLAS_DIAG Diag, const CBLAS_INT M, const CBLAS_INT N, const void* alpha, const void* A, const CBLAS_INT lda, void* B, const CBLAS_INT ldb)

    void cblas_ctrsm(const CBLAS_ORDER Order, const CBLAS_SIDE Side, const CBLAS_UPLO Uplo, const CBLAS_TRANSPOSE TransA, const CBLAS_DIAG Diag, const CBLAS_INT M, const CBLAS_INT N, const void* alpha, const void* A, const CBLAS_INT lda, void* B, const CBLAS_INT ldb)

    void cblas_zgemm(const CBLAS_ORDER Order, const CBLAS_TRANSPOSE TransA, const CBLAS_TRANSPOSE TransB, const CBLAS_INT M, const CBLAS_INT N, const CBLAS_INT K, const void* alpha, const void* A, const CBLAS_INT lda, const void* B, const CBLAS_INT ldb, const void* beta, void* C, const CBLAS_INT ldc)

    void cblas_zsymm(const CBLAS_ORDER Order, const CBLAS_SIDE Side, const CBLAS_UPLO Uplo, const CBLAS_INT M, const CBLAS_INT N, const void* alpha, const void* A, const CBLAS_INT lda, const void* B, const CBLAS_INT ldb, const void* beta, void* C, const CBLAS_INT ldc)

    void cblas_zsyrk(const CBLAS_ORDER Order, const CBLAS_UPLO Uplo, const CBLAS_TRANSPOSE Trans, const CBLAS_INT N, const CBLAS_INT K, const void* alpha, const void* A, const CBLAS_INT lda, const void* beta, void* C, const CBLAS_INT ldc)

    void cblas_zsyr2k(const CBLAS_ORDER Order, const CBLAS_UPLO Uplo, const CBLAS_TRANSPOSE Trans, const CBLAS_INT N, const CBLAS_INT K, const void* alpha, const void* A, const CBLAS_INT lda, const void* B, const CBLAS_INT ldb, const void* beta, void* C, const CBLAS_INT ldc)

    void cblas_ztrmm(const CBLAS_ORDER Order, const CBLAS_SIDE Side, const CBLAS_UPLO Uplo, const CBLAS_TRANSPOSE TransA, const CBLAS_DIAG Diag, const CBLAS_INT M, const CBLAS_INT N, const void* alpha, const void* A, const CBLAS_INT lda, void* B, const CBLAS_INT ldb)

    void cblas_ztrsm(const CBLAS_ORDER Order, const CBLAS_SIDE Side, const CBLAS_UPLO Uplo, const CBLAS_TRANSPOSE TransA, const CBLAS_DIAG Diag, const CBLAS_INT M, const CBLAS_INT N, const void* alpha, const void* A, const CBLAS_INT lda, void* B, const CBLAS_INT ldb)

    void cblas_chemm(const CBLAS_ORDER Order, const CBLAS_SIDE Side, const CBLAS_UPLO Uplo, const CBLAS_INT M, const CBLAS_INT N, const void* alpha, const void* A, const CBLAS_INT lda, const void* B, const CBLAS_INT ldb, const void* beta, void* C, const CBLAS_INT ldc)

    void cblas_cherk(const CBLAS_ORDER Order, const CBLAS_UPLO Uplo, const CBLAS_TRANSPOSE Trans, const CBLAS_INT N, const CBLAS_INT K, const float alpha, const void* A, const CBLAS_INT lda, const float beta, void* C, const CBLAS_INT ldc)

    void cblas_cher2k(const CBLAS_ORDER Order, const CBLAS_UPLO Uplo, const CBLAS_TRANSPOSE Trans, const CBLAS_INT N, const CBLAS_INT K, const void* alpha, const void* A, const CBLAS_INT lda, const void* B, const CBLAS_INT ldb, const float beta, void* C, const CBLAS_INT ldc)

    void cblas_zhemm(const CBLAS_ORDER Order, const CBLAS_SIDE Side, const CBLAS_UPLO Uplo, const CBLAS_INT M, const CBLAS_INT N, const void* alpha, const void* A, const CBLAS_INT lda, const void* B, const CBLAS_INT ldb, const void* beta, void* C, const CBLAS_INT ldc)

    void cblas_zherk(const CBLAS_ORDER Order, const CBLAS_UPLO Uplo, const CBLAS_TRANSPOSE Trans, const CBLAS_INT N, const CBLAS_INT K, const double alpha, const void* A, const CBLAS_INT lda, const double beta, void* C, const CBLAS_INT ldc)

    void cblas_zher2k(const CBLAS_ORDER Order, const CBLAS_UPLO Uplo, const CBLAS_TRANSPOSE Trans, const CBLAS_INT N, const CBLAS_INT K, const void* alpha, const void* A, const CBLAS_INT lda, const void* B, const CBLAS_INT ldb, const double beta, void* C, const CBLAS_INT ldc)
